--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
